<resources>
    <string name="app_name">Fix It</string>


    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="login">LogIn</string>
    <string name="don_t_have_account">Don`t have account? </string>
    <string name="create_account">Create account</string>


    <string name="customer">Customer</string>

    <string name="first_name">First Name</string>
    <string name="second_name">Second Name</string>
    <string name="phone_number">Phone Number</string>
    <string name="age">Age</string>
    <string name="select_date">Select Date</string>
    <string name="email">Email -- Username</string>
    <string name="your_password">Your password</string>
    <string name="re_password">Re_Password</string>
    <string name="accept_our_terms">Accept our Terms</string>
    <string name="read_our_terms">----> Read our terms</string>
    <string name="register">Register</string>
    <string name="mechanical">Mechanical</string>
    <string name="Required">Required</string>
    <string name="not_match">not match</string>
    <string name="match">match</string>
    <string name="your_code">Your code</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="get_code">Get Code</string>
    <string name="please_entre_your_right_phone">Please entre your right phone</string>
    <string name="show_password">Show Password</string>
    <string name="title_activity_customer_home">CustomerHomeActivity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>

    <string name="home_second">Home Second</string>
    <string name="something_wrong_happend_Please_try_again_later">Something wrong happend,Please try again later</string>
    <string name="please_enter_a_valid_email">Please enter a valid email</string>
    <string name="title_activity_customer_main">CustomerMainActivity</string>
    <string name="title_activity_mechanecal">MechanecalActivity</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>


</resources>

